--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ export(align_columns)
 export(generate_matrix)
 export(generate_non_gaussian)
 export(overica)
-export(torch_ecgf)
+export(torch_ecgf_batch)
 import(torch)
 importFrom(clue,solve_LSAP)
