4th moment extensions Phase-1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,12 @@ export(avgOICAruns)
 export(generate_matrix)
 export(generate_non_gaussian)
 export(overica)
+export(overica_sem_full)
 export(torch_ecgf_batch)
+export(torch_unique_4th_central_moments)
 import(torch)
 importFrom(clue,solve_LSAP)
 importFrom(dplyr,distinct)
+importFrom(lifecycle,deprecated)
 importFrom(stats,cor)
 importFrom(stats,density)
