--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(generate_non_gaussian)
 export(overica)
 export(overica_sem_full)
 export(torch_ecgf_batch)
+export(torch_unique_234th_central_moments)
 export(torch_unique_4th_central_moments)
 import(torch)
 importFrom(clue,solve_LSAP)
