Over ICA comes of age...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,14 @@
 
 export(align_columns)
 export(avgOICAruns)
+export(compute_central_moments)
+export(compute_unique_moment_indices)
+export(extract_covariance_and_kurtosis)
 export(generate_matrix)
 export(generate_non_gaussian)
 export(overica)
 export(overica_sem_full)
 export(torch_ecgf_batch)
-export(torch_unique_234th_central_moments)
-export(torch_unique_24th_central_moments)
 import(torch)
 importFrom(clue,solve_LSAP)
 importFrom(dplyr,distinct)
