added a solid pseudo AIC/BIC based grid search utillity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(align_columns)
 export(avgOICAruns)
+export(compute_AIC)
+export(compute_BIC)
 export(compute_central_moments)
 export(compute_unique_moment_indices)
 export(extract_covariance_and_kurtosis)
 export(generate_matrix)
 export(generate_non_gaussian)
-export(overica)
-export(overica_sem_full)
+export(grid_search_overica)
+export(overica.gcov)
+export(overica.moments.sem)
 export(torch_ecgf_batch)
 import(torch)
 importFrom(clue,solve_LSAP)
